<resources>
    <string name="app_name">Eazy Sacco</string>

    <string name="forgotpass">Forgot Password</string>
    <string name="back2Login">Return to Login</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string name="hello">Hello</string>
    <string name="john">User</string>
    <string name="search_elements">Search Elements</string>
    <string name="emails">My Sacco</string>
    <string name="chat">My Account</string>
    <string name="projects">Transaction</string>

    <string name="profile">Profile</string>
    <string name="trending">Trending</string>
    <string name="dummu_text">Lorem Ipsum is simply dummy Text of the printing and Type setting Industry</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="transactions">transaction</string>
    <string name="acc_bal">100000</string>


    <string name="acc_bal11">100000</string>
    <string name="acc_bal2">100000</string>
    <string name="acc_bal3">100000</string>


    <string-array name="Account_Numbers">
        <item>001-SACC0-Cocis- 0023</item>
        <item>001-SACC0-KAmpala- 0124</item>
        <item>003-SACC0-CSY1- 0023</item>
        <item>004-SACC0-CSY1- 0001</item>
    </string-array>

    <string-array name="Saving_Period">
        <item>Month</item>
        <item>Years</item>
    </string-array>
    <string name="title_activity_sacco_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>