<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"

    android:background="@drawable/white_rectangle_background"
tools:context=".NavigationActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/header_background"
    android:padding="10dp"
    app:layout_constraintTop_toTopOf="parent">

</androidx.constraintlayout.widget.ConstraintLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       tools:ignore="MissingConstraints"
       android:id="@+id/layoutToper"
       android:layout_marginTop="50dp"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:id="@+id/line1"
           >

           <androidx.appcompat.widget.Toolbar
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/toolbar"
               android:background="@color/colorPrimary"
               app:title="@string/app_name"

               />
           <LinearLayout android:id="@+id/balance"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/line1"
               android:orientation="vertical"
               android:background="@color/colorBackground"
               android:gravity="center"
               >
               <TextView
                   android:id="@+id/accname_balance"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/cerapro_medium"
                   android:textAllCaps="true"
                   android:textColor="@color/black"
                   android:padding="2dp"
                   android:textSize="24sp"
                   android:text="Sacco Account No." />
               <TextView
                   android:id="@+id/available_balance"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="2dp"
                   android:layout_marginBottom="5dp"
                   android:fontFamily="@font/cerapro_medium"
                   android:textAllCaps="true"
                   android:textColor="@color/black"
                   android:padding="2dp"
                   android:textSize="16sp"
                   android:text="Available Balance" />

               <LinearLayout
                   android:id="@+id/balanceInside"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/balance"
                   android:orientation="horizontal"
                   android:background="@color/colorBackground"
                   android:gravity="center"
                   >

                   <TextView
                       android:id="@+id/AccountBalance"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="2dp"
                       android:layout_marginBottom="5dp"
                       android:fontFamily="@font/cerapro_medium"
                       android:textAllCaps="true"
                       android:textColor="@color/black"
                       android:textSize="50sp"
                       android:text="@string/acc_bal" />

                   <TextView
                       android:id="@+id/Ugx"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="2dp"
                       android:layout_marginBottom="5dp"
                       android:fontFamily="@font/cerapro_medium"
                       android:textAllCaps="true"
                       android:textColor="@color/black"
                       android:padding="20dp"
                       android:textSize="30sp"
                       android:text="/ugx" />

               </LinearLayout>
           </LinearLayout>



       </LinearLayout>

   </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"


        app:layout_constraintTop_toBottomOf="@id/layoutToper"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling"
        tools:layout_editor_absoluteX="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:padding="5dp"
            >

            <LinearLayout
                android:id="@+id/layoutEmail"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"

                android:gravity="center"
                android:orientation="vertical"


                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@+id/layoutSacco"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/layoutEmailIn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/logo_settings"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp" />


                <TextView


                    android:text="@string/emails"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutSacco"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintDimensionRatio="H, 1:1"


                app:layout_constraintStart_toEndOf="@id/layoutEmail"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/layoutSaccoIn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/ic_location"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="View Saccos"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutChat"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"

                android:gravity="center"
                android:orientation="vertical"

                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutSacco"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/layoutChatIn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/ic_transactions"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="Transactions"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutProjects"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"

                app:layout_constraintDimensionRatio="H, 1:1"

                app:layout_constraintEnd_toStartOf="@+id/layoutProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutEmail">
                <LinearLayout
                    android:id="@+id/layoutProjectsIn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/ic_add_money"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="Deposit Money"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"


                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutProfile"
                app:layout_constraintTop_toBottomOf="@id/layoutChat">

                <LinearLayout
                    android:id="@+id/layoutProfileIn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/ic_profile"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSettings"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"


                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutProfile"
                app:layout_constraintTop_toBottomOf="@id/layoutChat">

                <LinearLayout
                    android:id="@+id/layoutSettingsIn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/logo_settings"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>



